volexc/tests/ui/mapkey_array_of_float.typescript.out
Error: invalid map key type: arrays cannot be used as map keys in TypeScript
   ╭─[mapkey_array_of_float.vol:6:12]
   │
 6 │     data: {[f32]:string}
   │            ──┬──  
   │              ╰──── array type used here
───╯